--- a/findly-builder/src/app/components/app-menu/app-menu.component.scss
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.scss
@@ -129,8 +129,10 @@ app-mainmenu{
 							text-align: center;
 							line-height: 0;
 							background: transparent;
-							&::before{
-								display: none !important;
+							&.before-none{
+								&::before{
+									display: none !important;
+								}
 							}
 							&:hover{
 								background: #F8F9FA;
@@ -304,8 +306,10 @@ app-mainmenu{
 					}
 					.dropdown-open {
 						.dropdown-input{
-							&::before{
-								display: none !important;
+							&.before-none{
+								&::before{
+									display: none !important;
+								}
 							}
 						}
 					}
