--- a/findly-builder/src/app/components/credentials-list/credentials-list.component.html
+++ b/findly-builder/src/app/components/credentials-list/credentials-list.component.html
@@ -63,8 +63,10 @@
             <div class="kr-sg-input-text mb-4">
                 <div class="label-text">Credential Name</div>
             
-                <input type="text" autocomplete="off" name="credname" placeholder="Enter Name" [(ngModel)]="credntial.name"
+                <input type="text" autocomplete="off" name="credname" placeholder="Enter Name" [(ngModel)]="credntial.name"  id="addSourceTitleInput" (change)="inputChanged('title')"
                     class="input-text">
+               <img id="infoWarning1" src="assets/icons/warning_escalation.svg" style="display: none;" height="12" width="12" />
+
             </div>
             <div class="kr-sg-checkbox d-block p-0">
                 <input id="checkbox_1" class="checkbox-custom" type="checkbox" [(ngModel)]="credntial.anonymus">
@@ -78,7 +80,7 @@
     
             <div class="label-text">JWT Signing Algorithm Used For Client App Authentication</div>
             <div class="kr-sg-dropdowns">
-                <div class="dropdown dropdown-open">
+                <div class="dropdown dropdown-open" >
                     <button class="dropdown-toggle dropdown-input" data-toggle="dropdown"><span class="select-placeholder">
                             {{credntial.awt}}</span> </button>
                     <ul class="dropdown-menu content-menu">
@@ -98,7 +100,7 @@
         </div>
         <!-- </perfect-scrollbar> -->
         <div class="modal-footer">
-            <button class="kr-sg-button-primary btn_lg" (click)="createCredential()">Add</button>
+            <button class="kr-sg-button-primary btn_lg" (click)="validateSource()">Add</button>
             <button class="kr-sg-button-secondary btn_lg" (click)="closeModalPopup()">Cancel</button>
         </div>
     </kr-modal> 
