--- a/findly-builder/src/app/helpers/components/useronboarding-journey/useronboarding-journey.component.html
+++ b/findly-builder/src/app/helpers/components/useronboarding-journey/useronboarding-journey.component.html
@@ -50,8 +50,8 @@
         <div class="card_">
           <div class="card_header">
             <div data-toggle="collapse" data-parent="#accordion" href="#collapseOne" class="card_link" aria-expanded="true">
-              <div class="instruction-number" *ngIf="tourData[0].addDataVisited" [ngStyle]="{'border':'none'}"><img src='assets/icons/check-config.svg' height="19"/></div>  
-              <div class="instruction-number" *ngIf="!tourData[0].addDataVisited">1</div>
+              <div class="instruction-number" *ngIf="tourData[0].addData" [ngStyle]="{'border':'none'}"><img src='assets/icons/check-config.svg' height="19"/></div>  
+              <div class="instruction-number" *ngIf="!tourData[0].addData">1</div>
                 <div class="guide-name">Start by Adding Data</div>              
             </div>
           </div>
@@ -68,8 +68,8 @@
         <div class="card_">
           <div class="card_header">
             <div data-toggle="collapse" data-parent="#accordion" href="#collapse2" class="card_link" aria-expanded="true">
-              <div class="instruction-number" *ngIf="tourData[1].indexDataVisited" [ngStyle]="{'border':'none'}"><img src='assets/icons/check-config.svg' height="19"/></div>  
-              <div class="instruction-number" *ngIf="!tourData[1].indexDataVisited">2</div>
+              <div class="instruction-number" *ngIf="tourData[1].indexData" [ngStyle]="{'border':'none'}"><img src='assets/icons/check-config.svg' height="19"/></div>  
+              <div class="instruction-number" *ngIf="!tourData[1].indexData">2</div>
                 <div class="guide-name">Index Data</div>              
             </div>
           </div>
@@ -86,8 +86,8 @@
         <div class="card_">
           <div class="card_header">
             <div data-toggle="collapse" data-parent="#accordion" href="#collapse3" class="card_link" aria-expanded="true">
-              <div class="instruction-number" *ngIf="tourData[2].optimiseSearchResultsVisited" [ngStyle]="{'border':'none'}"><img src='assets/icons/check-config.svg' height="19"/></div>  
-              <div class="instruction-number" *ngIf="!tourData[2].optimiseSearchResultsVisited">3</div>
+              <div class="instruction-number" *ngIf="tourData[2].optimiseSearchResults" [ngStyle]="{'border':'none'}"><img src='assets/icons/check-config.svg' height="19"/></div>  
+              <div class="instruction-number" *ngIf="!tourData[2].optimiseSearchResults">3</div>
                 <div class="guide-name">Optimize Search Results</div>              
             </div>
           </div>
@@ -104,8 +104,8 @@
         <div class="card_">
           <div class="card_header">
             <div data-toggle="collapse" data-parent="#accordion" href="#collapse4" class="card_link" aria-expanded="true">
-              <div class="instruction-number" *ngIf="tourData[3].designSearchExperienceVisited" [ngStyle]="{'border':'none'}"><img src='assets/icons/check-config.svg' height="19"/></div>  
-              <div class="instruction-number" *ngIf="!tourData[3].designSearchExperienceVisited">4</div>
+              <div class="instruction-number" *ngIf="tourData[3].designSearchExperience" [ngStyle]="{'border':'none'}"><img src='assets/icons/check-config.svg' height="19"/></div>  
+              <div class="instruction-number" *ngIf="!tourData[3].designSearchExperience">4</div>
                 <div class="guide-name">Design Search Experience</div>              
             </div>
           </div>
@@ -122,8 +122,8 @@
         <div class="card_">
           <div class="card_header">
             <div data-toggle="collapse" data-parent="#accordion" href="#collapse5" class="card_link" aria-expanded="true">
-              <div class="instruction-number" *ngIf="tourData[4].testAppVisited" [ngStyle]="{'border':'none'}"><img src='assets/icons/check-config.svg' height="19"/></div>  
-              <div class="instruction-number" *ngIf="!tourData[4].testAppVisited">5</div>
+              <div class="instruction-number" *ngIf="tourData[4].testApp" [ngStyle]="{'border':'none'}"><img src='assets/icons/check-config.svg' height="19"/></div>  
+              <div class="instruction-number" *ngIf="!tourData[4].testApp">5</div>
                 <div class="guide-name">Test the Application</div>              
             </div>
           </div>
@@ -140,8 +140,8 @@
         <div class="card_">
           <div class="card_header">
             <div data-toggle="collapse" data-parent="#accordion" href="#collapse6" class="card_link" aria-expanded="true">
-              <div class="instruction-number" *ngIf="tourData[5].fineTuneRelevanceVisited" [ngStyle]="{'border':'none'}"><img src='assets/icons/check-config.svg' height="19"/></div>  
-              <div class="instruction-number" *ngIf="!tourData[5].fineTuneRelevanceVisited">6</div>
+              <div class="instruction-number" *ngIf="tourData[5].fineTuneRelevance" [ngStyle]="{'border':'none'}"><img src='assets/icons/check-config.svg' height="19"/></div>  
+              <div class="instruction-number" *ngIf="!tourData[5].fineTuneRelevance">6</div>
                 <div class="guide-name">Fine-Tune Relevance</div>              
             </div>
           </div>
