--- a/findly-builder/src/app/components/search-interface/search-interface.component.scss
+++ b/findly-builder/src/app/components/search-interface/search-interface.component.scss
@@ -115,6 +115,10 @@
                             border: 0;
                             color: #BDC1C6;
                         }
+                        .drop-enable{
+                            border: solid 1px;
+                            background: #ffffff;
+                        }
                     }
                 }
                 .group-radiobutton{
