action,smalltalk, weight dropdown UI fixes

--- a/findly-builder/src/app/components/team-management/team-management.component.html
+++ b/findly-builder/src/app/components/team-management/team-management.component.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="col-5 title">ROLE</div>  
                 <div class="col-3 title text-right delete-action">
-                    <button id='btn_delete' class="kr-sg-button-danger btn_lg" *ngIf="selcectionObj && selcectionObj.selectedCount" (click)="deleteFacets(null,true)">Delete</button>
+                    <button id='btn_delete' class="kr-sg-button-danger btn_lg" *ngIf="selcectionObj && selcectionObj.selectedCount" (click)="deleteFacets(null,true)">Remove</button>
                 </div>              
             </div>
             <ng-container *ngIf="(membersList && membersList.length)">
