--- a/findly-builder/src/app/components/add-faq/add-faq.component.html
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.html
@@ -143,7 +143,7 @@
                 <div class="slider"><span class="disabled">Conditions</span><span class="enabled">Conditions</span></div>
               </label>
             </div>
-            <div class="deleteResponseDiv red" (click)="$event.stopPropagation();delete(index)"><img src="assets/images/delete_response.svg">Delete</div>
+            <div class="deleteResponseDiv red" (click)="$event.stopPropagation();delete(index)" ngbTooltip="Delete"><img src="assets/images/delete_response.svg">Delete</div>
           </div>
           <div class="condition-view-mode" *ngIf="(faqObj && faqObj.answerType === 'condition') && (currentEditIndex !== index)">
             <div class="label_text">Conditions</div>
