--- a/findly-builder/src/app/components/business-rules/business-rules.component.html
+++ b/findly-builder/src/app/components/business-rules/business-rules.component.html
@@ -224,7 +224,7 @@
                                             </div>
                                         </div>
                                         <div *ngIf="ruleObj.contextType ==='userContext'">
-                                            <input type="text" id="userType" [(ngModel)]="ruleObj.contextCategory" />
+                                            <input type="text" id="userType"class="w-100" [(ngModel)]="ruleObj.contextCategory" />
                                         </div>
                                     </div>
                                     <div class="col-3 pr-0">
