--- a/findly-builder/src/app/components/settings/settings.component.html
+++ b/findly-builder/src/app/components/settings/settings.component.html
@@ -201,7 +201,7 @@
                         </div>
                     </div>
                     <div class="input-data">
-                        <div class="label-text">Index ID</div>
+                        <div class="label-text">Search ID</div>
                         <div class="input-box mb-4">
                             <div class="kr-sg-input-text">
                                 <input type="text" class="input-text" [value]="serachIndexId" readonly>
