--- a/findly-builder/src/app/components/result-ranking/result-ranking.component.html
+++ b/findly-builder/src/app/components/result-ranking/result-ranking.component.html
@@ -85,7 +85,7 @@
                                                 </div>                                                    
                                             </div>
                                             <div class="restore-icon" [ngClass]="{'disableDiv' : permisionView}" (click)="restore(list)">
-                                                <img class="action-icon" src="assets/icons/restore.svg" ngbTooltip='Rest' placement="top" container='body'>
+                                                <img class="action-icon" src="assets/icons/restore.svg" ngbTooltip='Reset' placement="top" container='body'>
                                             </div>
                                         </div>
                                     </div> 
@@ -202,7 +202,10 @@
                                                             <div class="desc-text-ranking">{{actLog.target.contentInfo.shortDesc}}</div>
                                                         </ng-container>                                                   
                                                         <div class="info-data-pinned-or-boostead">
-                                                            <div class="pinned"><img src="assets/icons/resultranking/pined.svg">PINNED</div>
+                                                            <div class="pinned" *ngIf="actLog.customization.action == 'pinned'"><img src="assets/icons/resultranking/pined.svg">PINNED</div>
+                                                            <div class="pinned" *ngIf="actLog.customization.action == 'hidden'"><img src="assets/icons/resultranking/Unsee.svg">HIDDEN</div>
+                                                            <div class="pinned" *ngIf="actLog.customization.action == 'lowered'"><img src="assets/icons/resultranking/MoveUp.svg">{{actLog.customization.value}}x LOWERED</div>
+                                                            <div class="pinned" *ngIf="actLog.customization.action == 'boosted'"><img src="assets/icons/resultranking/MoveUp.svg" class="rotateimg180-move-up">{{actLog.customization.value}}x BOOSTED</div>
                                                             <div class="time-stamp">{{actLog.customization.lMod}}</div>
                                                         </div>  
                                                         <div class="remove-btn-sec" [ngClass] = "{'disableDiv' : permisionView }">
