Add New Result changes. Added drag-disabled state for hidden results.

--- a/findly-builder/src/app/components/add-result/add-result.component.html
+++ b/findly-builder/src/app/components/add-result/add-result.component.html
@@ -276,7 +276,7 @@
             </ng-container>
         </perfect-scrollbar>
         
-        <div class="group-radiobutton">
+        <!-- <div class="group-radiobutton">
             <div class="kr-sg-radiobutton">
                 <input id="radio-last" name="radio" class="radio-custom" type="radio"  [checked] = "positionRecord == 'top'" (change)="positionRecord = 'top'">
                 <label for="radio-last" class="radio-custom-label">Add to the top</label>
@@ -285,7 +285,7 @@
                 <input id="radio-top" name="radio" class="radio-custom" type="radio"  [checked] = "positionRecord == 'bottom'" (change)="positionRecord = 'bottom'">
                 <label for="radio-top" class="radio-custom-label">Add to the last</label>
             </div>
-        </div> 
+        </div>  -->
 
         <div class="footer-info">
             <div class="selected-length">{{ recordArray.length }} results selected</div>
