--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -13833,3 +13833,8 @@ button.search-button:disabled {
     line-height: 15px;
     padding: 10px;
 }
+
+.task-wrp.structure-data-wrp.ui-state-disabled, .ui-widget-content .ui-state-disabled, .ui-widget-header .ui-state-disabled{
+    opacity: unset;
+    pointer-events: unset;
+}
